# src/api/v1/response_messages.py
@@ -61,3 +61,8 @@ USER_ROLES_UPDATED = {
 USER_ROLES_DELETED = {
     "msg": "User's roles deleted."
 }
+
+SOCIAL_ACCOUNT_NOT_FOUND = {
+    "msg": "Social account not found."
+}
+
