# src/api/v1/schemas/openapi_account.yaml
@@ -10,13 +10,15 @@ info:
     - Изменение логина и/или пароля
     - Получение истории входа в аккаунт
   termsOfService: http://swagger.io/terms/
-  version: 1.3.1
+  version: 1.3.2
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 tags:
   - name: пользователь
     description: Действия с пользователем
+  - name: аккаунт соцсети
+    description: Действия с аккаунтами соцсетей
 components:
   schemas:
     Message:
@@ -27,6 +29,13 @@ components:
         msg:
           type: string
           example: Неверный логин или пароль.
+          
+    SocialAccountNotFound:
+      type: object
+      properties:
+        msg:
+          type: string
+          example: Social account not found.
     
     Tokens:
       required:
@@ -219,7 +228,36 @@ paths:
                 items:
                   $ref: '#/components/schemas/LoginHistory'
         '401':
-          $ref: '#/components/responses/UnauthorizedError' 
+          $ref: '#/components/responses/UnauthorizedError'
+
+  /social_account/{id}:
+    delete:
+      tags:
+        - аккаунт соцсети
+      summary: Отвязать аккаунт соцсети
+      description: Отвязать аккаунт соцсети
+      security: 
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: ID записи в реестре аккаунтов соцсетей 
+          required: true
+          schema:
+            type: string
+            format: uuid
+            example: Gcc55edda-7acd-4128-877d-02b94430896a
+      responses:
+        '200':
+          description: Успех
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '404':
+          description: Запись не найдена 
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SocialAccountNotFound'
     
   /user/logout:
     post:
